--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,14 @@
 <h1>Sign Up!</h1>
+
+<%= form_for(@user) do |f| %>
+
+  <%= f.label :name %>:
+  <%= f.text_field :name %> </br>
+
+  <%= f.label :email %>:
+  <%= f.text_field :email %> </br>
+
+
+  <%= f.submit %>
+
+<% end %>
