--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,17 @@
     <% end %>
 
     <% if flash[:alert] %>
-      <p id="alert"><%= flash[:alert] %></p> 
+      <p id="alert"><%= flash[:alert] %></p>
     <% end %>
 
     <%= yield %>
+
+      <p class="userinfo">
+        <% if current_user %>
+          Welcome back <%= current_user.name! %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+        <% else %>
+          <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+        <% end %>
+      </p>
   </body>
 </html>
