--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<h3><%= @restaurant.name %></h3>
+<p>Address: <%= @restaurant.address %></p>
+
+<p> <%= link_to 'Make a Reservation Here!', new_reservation_path(@restaurant) %></p>
