adding validations to models

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,15 +1,3 @@
 <h1>Add a Restaurant</h1>
 
-<%= form_for(@restaurant) do |f| %>
-  <%= f.label :name %>:
-  <%= f.text_field :name %> </br>
-
-  <%= f.label :address %>:
-  <%= f.text_field :address %> </br>
-
-  <%= f.label :capacity %>:
-  <%= f.number_field :capacity %> </br>
-
-  <%= f.submit %>
-
-<% end %>
+<%= render 'form' %>
