--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,3 +2,5 @@
 <p>Address: <%= @restaurant.address %></p>
 
 <p> <%= link_to 'Make a Reservation Here!', new_reservation_path(@restaurant) %></p>
+
+<%= link_to 'Back', restaurants_path %> 
