--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @restaurant.name %></h3>
 <p>Address: <%= @restaurant.address %></p>
 
-<p> <%= link_to 'Make a Reservation Here!', new_reservation_path(@restaurant) %></p>
+<p> <%= link_to 'Make a Reservation Here!', new_restaurant_reservation_path(@restaurant) %></p>
 
-<%= link_to 'Back', restaurants_path %> 
+<%= link_to 'Back', restaurants_path %>
