--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Restaurants</h1>
 
 <% @restaurants.each do |restaurant| %>
-  <p><%= restaurant.name %></p></br>
+  <p><%= link_to restaurant.name, restaurant_path(restaurant) %></p></br>
   <p><%= restaurant.address %></p>
+
+<%= link_to 'Log in', new_session_path %> or <%= link_to 'Sign Up', new_user_path %>
 
 <% end %>
