--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,8 @@
 <h3><%= @restaurant.name %></h3>
 <p>Address: <%= @restaurant.address %></p>
 
-<p> <%= link_to 'Make a Reservation Here!', new_restaurant_reservation_path(@restaurant) %></p>
+<% if current_user %>
+  <%= link_to 'Make a Reservation Here!', new_restaurant_reservation_path(@restaurant) %>
+<% end %>
 
 <%= link_to 'Back', restaurants_path %>
