--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
       <p class="userinfo">
         <% if current_user %>
-          Welcome back <%= current_user.name %>! <%= link_to "Log out", session_path("current"), :method => :delete %>
+          Welcome back <%= link_to current_user.name, user_path(current_user.id) %>! <%= link_to "Log out", session_path("current"), :method => :delete %>
         <% else %>
           <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
         <% end %>
