--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,6 @@
-<h3><%= @restaurant.name %></h3>
+<div>
+  <h3><%= @restaurant.name %></h3>
+</div>
 <p>Address: <%= @restaurant.address %></p>
 
 <% if current_user %>
