--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+ body {
+   background-color: #EBEBE6;
+   font-family: arial;
+ }
+
  .userinfo {
    float: right;
  }
