--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Restaurants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+/* Index */
+
+.index {
+  background-color: white;
+}
+
+.restaurant {
+  background-color: white;
+  padding: 10px;
+  border-top: 1px solid #EBEBE6;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+/* Show */
