--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <p id="alert"><%= flash[:alert] %></p>
     <% end %>
 
+  <div>
     <p class="userinfo">
       <% if current_user %>
         Welcome back <%= link_to current_user.name, user_path(current_user.id) %>! <%= link_to "Log out", session_path("current"), :method => :delete %>
@@ -24,6 +25,7 @@
         <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
     </p>
+  </div>
 
     <%= yield %>
 
