--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -28,3 +28,16 @@
 }
 
 /* Show */
+
+.restaurant-header {
+  background-color: #454545;
+  color: white;
+}
+
+.reservation {
+  background-color: white;
+}
+
+.about {
+  background-color: white;
+}
