--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.create-account {
+  background-color: white;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+.field {
+  margin: 10px;
+  width: 150px;
+  border-radius: 5px;
+}
+
+.submit {
+  background-color: #FF6600;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  width: 150px;
+  margin-left: 10px;
+}
+
+.back {
+  float: right;
+}
