--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,15 @@
 
   <div class="header container-fluid">
 
-    <h3>SeatYourself</h3>
+    <h3 class="logo">SeatYourself</h3>
 
-    <p class="userinfo">
+    <div class="userinfo">
       <% if current_user %>
         Welcome back <%= link_to current_user.name, user_path(current_user.id) %>! <%= link_to "Log out", session_path("current"), :method => :delete %>
       <% else %>
-        <%= link_to "Sign in", new_session_path %> <%= link_to "Sign up", new_user_path %>
+        <%= link_to "Sign in", new_session_path %> <%= link_to "Sign up", new_user_path, class: "sign-up" %>
       <% end %>
-    </p>
+    </div>
 
   </div>
 
