--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,8 +1,9 @@
 <div class="restaurant-header container-fluid">
+  <img src="<%= @restaurant.picture %>" height="150" width="150">
   <h3><%= @restaurant.name %></h3>
 </div>
 
-<div class="reservation container"></div>
+<div class="reservation container">
   <p><% if current_user %>
   <%= link_to 'Make a Reservation Here!', new_restaurant_reservation_path(@restaurant) %>
   <% end %></p>
@@ -13,6 +14,5 @@
   <p>Address: <%= @restaurant.address %>, <%= @restaurant.phone %></p>
   <p><%= @restaurant.description %></p>
 </div>
-
 
 <%= link_to 'Back', restaurants_path %>
