--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 
 <% @user.reservations.each do |reservation| %>
   <tr>
-    <td><%= reservation.date_and_time %></td>
+    <td><%= reservation.date_and_time.strftime("%B %d %I:%M %P") %></td>
     <td><%= reservation.party_size %></td>
     <td><%= reservation.restaurant.name %></td>
   </tr>
