--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
  .userinfo {
    float: right;
    margin-top: 20px;
+   font-size: 18px;
  }
 
  /* Header */
@@ -40,6 +41,6 @@
 .sign-up {
   background-color: #FF6600;
   border-radius: 5px;
-  padding: 5px;
+  padding: 8px;
   color: white;
 }
