--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -15,6 +15,8 @@
   <p><%= @restaurant.description %></p>
 </div>
 
+<div id="map" data-latitude="<%= @restaurant.latitude %>", data-longitude="<%= @restaurant.longitude %>"></div>
+
 <div class="nearby container">
   <h4>Nearby Restaurants</h4>
   <ol>
