adding marker with restaurant name to map

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -15,7 +15,7 @@
   <p><%= @restaurant.description %></p>
 </div>
 
-<div id="map" data-latitude="<%= @restaurant.latitude %>", data-longitude="<%= @restaurant.longitude %>"></div>
+<div id="map" data-name="<%= @restaurant.name %>" data-latitude="<%= @restaurant.latitude %>", data-longitude="<%= @restaurant.longitude %>"></div>
 
 <div class="nearby container">
   <h4>Nearby Restaurants</h4>
