--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,17 +1,6 @@
 <%= form_for ([@restaurant, @reservation]) do |f| %>
 
-  <% if @reservation.errors.any? %>
-    <div id="error_explanation">
-        <h2><%= pluralize(@reservation.errors.count, "error") %> prohibited this reservation from being made:</h2>
-
-        <ul>
-          <% @reservation.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-          <% end %>
-        </ul>
-    </div>
-  <% end %>
-
+  <%= render 'shared/errors' %>
 
   <%= f.label :date_and_time %>
   <%= f.datetime_select :date_and_time %> </br>
