fixing embedded google map

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,22 +6,24 @@
 <div class="reservation container">
   <p><% if current_user %>
       <%= link_to 'Make a Reservation Here!', new_restaurant_reservation_path(@restaurant) %>
-      <h3>Make a Reservation Here!</h3>
-      <%= fields_for :reservations do |reservation_form| %>
+      <%= form_for [@restaurant, @reservation] do  %>
+        <h3>Make a Reservation Here!</h3>
+          <%= fields_for :reservations do |reservation_form| %>
 
-      <%= reservation_form.label :date_and_time %>:
-      <%= reservation_form.datetime_select :date_and_time %> </br>
+          <%= reservation_form.label :date_and_time %>:
+          <%= reservation_form.datetime_select :date_and_time %> </br>
 
-      <%= reservation_form.label :party_size %>:
-      <%= reservation_form.number_field :party_size %> </br>
+          <%= reservation_form.label :party_size %>:
+          <%= reservation_form.number_field :party_size %> </br>
 
-      <%= reservation_form.submit %>
+          <%= reservation_form.submit %>
+        <% end %>
       <% end %>
-
      <% else %>
-       <%= link_to 'Sign up to make a reservation here', new_user_path %>
-       <%= link_to 'Back to restaurants', restaurants_path %>
-     <% end %>
+       <%= link_to 'Sign up to make a reservation', new_user_path %> </br>
+       <%= link_to 'or Back to restaurants', restaurants_path %>
+  
+    <% end %>
   </p>
 </div>
 
